clean up, two basic functions of use

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,4 @@
-$color-active: aquamarine;
+$color-primary: aquamarine;
+$color-secondary: darkcyan;
 $color-inactive: lightgray;
 $color-white: white;
