--- a/src/scss/_calendar.scss
+++ b/src/scss/_calendar.scss
@@ -10,7 +10,7 @@
 	.title {
 		text-align: center;
 		padding: 5px;
-		color: darkcyan;
+		color: $color-secondary;
 	}
 
 	.btn {
@@ -26,7 +26,7 @@
 	
 		&:hover { 
 			cursor: pointer;
-			border-color: $color-active;
+			border-color: $color-primary;
 		 }
 	}
 	
@@ -70,11 +70,11 @@
 	}
 
 	.calendar-header {
-		background: $color-active;
+		background: $color-primary;
 		border-bottom: none;
 		text-align: center;
 		border: 0px !important;
-		color: darkcyan;
+		color: $color-secondary;
 	}
 
 	.calendar-item {
@@ -84,11 +84,16 @@
 	}
 
 	.calendar-item-active {
-		color: $color-active;
+    	color: $color-secondary;
 	}
 	
 	.calendar-item-inactive {
 		color: $color-inactive;
+	}
+
+	.calendar-item-busy {
+		background-color: $color-primary;
+    	color: $color-secondary;
 	}
 }
 
