fixed header style for big calendar

--- a/src/scss/_calendar.scss
+++ b/src/scss/_calendar.scss
@@ -122,3 +122,7 @@
 .calendar-big .calendar-item-busy {
     background-color: transparent !important;
 }
+
+.calendar-big td.calendar-header {
+	vertical-align: middle;
+}
